fix banner text alignment for mobile responsiveness

--- a/client/src/components/WelcomeBanner/style.css
+++ b/client/src/components/WelcomeBanner/style.css
@@ -7,7 +7,7 @@
 .banner-text {
   font-family: 'Quicksand', sans-serif;
   color: white;
-  text-align: left;
+  text-align: right;
   /* text-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); */
   text-shadow: 2px 2px rgb(86, 86, 86);
 
